# agente-documentos

./: GITHUB_INSTRUCTIONS.md  GITHUB_README.md  README.md  README_GITHUB_UPGRADE.md
agente-documentos/: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  QUICK_START.md  README.md  SECURITY.md  TECH_STACK.md  agent.py  app.py  generate_sample_pdf.py  pdf_utils.py  prompts.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  utils.py
agente-documentos/.github/: dependabot.yml  pull_request_template.md
agente-documentos/.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
agente-documentos/.github/workflows/: tests.yml
