[metadata]
name = agente-documentos
version = 1.0.0
author = Julia
description = Agente Local de Documentos - Analyze PDFs with AI
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tu-usuario/agente-documentos
repository = https://github.com/tu-usuario/agente-documentos
project_urls =
    Bug Tracker = https://github.com/tu-usuario/agente-documentos/issues
    Documentation = https://github.com/tu-usuario/agente-documentos#readme
    Source Code = https://github.com/tu-usuario/agente-documentos
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 4 - Beta
    Intended Audience :: End Users/Desktop
    Topic :: Office/Business
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
python_requires = >=3.8
packages = find:
install_requires =
    streamlit==1.28.1
    pymupdf==1.23.8
    requests==2.31.0
    python-dotenv==1.0.0
    reportlab==4.0.7

[options.extras_require]
dev =
    pytest>=7.0
    black>=22.0
    flake8>=4.0
    mypy>=0.950
